<resources>
    <string name="app_name">Simple Workout Notebook</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="about">About</string>
    <string name="data_management">Data management</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="about1">Hi! Thanks for downloading this app :)</string>
    <string name="about2">If you find any bugs or you have any suggestions to make this app better, please, send them to the following email:</string>
    <string name="about3">alex.pg@outlook.es</string>
    <string name="about4">Created by Alejandro P.G.</string>
    <string name="app_title">Simple\nWorkout\nNotebook</string>
    <string name="name_hint">Name</string>
    <string name="name_placeholder">Name</string>
    <string name="date_ph">Date</string>
    <string name="number">Nº:</string>
    <string name="number_ph">1</string>
    <string name="import_database">Import database</string>
    <string name="export_database">Export database</string>
    <string name="delete_database">Delete database</string>
    <string name="load_more_exercises">Load more exercises</string>
    <string name="search_exercise">Search exercise</string>
    <string name="you_have_not_registered_any_exercise_yet">You have not registered any exercise yet!</string>
    <string name="click_here_to_add_an_exercise">Click here to add an exercise!</string>
    <string name="note_title">Note</string>
    <string name="done">Done</string>
    <string name="write_your_note">Write your note…</string>
    <string name="keep_track_of">Keep track of:</string>
    <string name="weight">Weight</string>
    <string name="repetitions">Repetitions</string>
    <string name="resting_time">Resting time</string>
    <string name="execution_time">Execution time</string>
    <string name="failure">Failure</string>
    <string name="rir">RIR</string>
    <string name="target_reps">Target reps</string>
    <string name="mood">Mood</string>
    <string name="comment">Comment</string>
    <string name="note">Note</string>
    <string name="personalized_1">Personalized 1</string>
    <string name="personalized_2">Personalized 2</string>
    <string name="weight_unit">Weight unit:</string>
    <string name="kilograms_kg">Kilograms (kg)</string>
    <string name="pounds_lb">Pounds (lb)</string>
    <string name="exercise_name">Exercise name</string>
</resources>